Memory game, fix game cell alignment on Safari

--- a/16-memory-game/memory-game-react/src/components/GameCell.module.scss
+++ b/16-memory-game/memory-game-react/src/components/GameCell.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     @include ds.inherit-text-preset;
 
     img {
